# ngx-platform-bedrock

./: .checkov.yml  .gitignore  CLAUDE.md  DECISIONS.md  README.md
.github/workflows/: ci.yml  deploy-dev.yml
app/: pyproject.toml
app/scripts/: build_lambda_package.sh  deploy_ui.sh
app/src/ngx_workload_lab/: __init__.py  bedrock.py  config.py  logging_setup.py  main.py  models.py  storage.py  workload.py
app/src/ngx_workload_lab/prompts/: intent_parser.md  run_summary.md
app/tests/: test_bedrock.py  test_main.py  test_workload.py
app/ui/: config.template.js  index.html  index.js  styles.css
diagrams/: architecture-combined.drawio
infra/envs/dev/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform.tf  variables.tf
infra/modules/aurora/: main.tf  outputs.tf  terraform.tf  variables.tf
infra/modules/dynamodb/: main.tf  outputs.tf  variables.tf
infra/modules/lambda_api/: main.tf  outputs.tf  variables.tf
infra/modules/observability/: main.tf  outputs.tf  variables.tf
infra/modules/static_site/: main.tf  outputs.tf  terraform.tf  variables.tf
infra/modules/vpc/: main.tf  outputs.tf  terraform.tf  variables.tf
