[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ngx-workload-lab"
version = "0.1.0"
description = "AI-Driven Database Workload Lab — Lambda service backing the platform UI."
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }

dependencies = [
  "fastapi==0.115.6",
  "mangum==0.19.0",
  "pydantic==2.10.4",
  "structlog==24.4.0",
  "boto3==1.35.92",
  "botocore==1.35.92",
  "psycopg[binary]==3.2.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "httpx==0.28.1",
  "ruff==0.8.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ngx_workload_lab"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "ANN", # flake8-annotations
  "RUF", # ruff-specific
]
ignore = [
  "ANN401", # allow Any in type hints (boto3 returns Any everywhere)
  "E501",   # line length is enforced by formatter, not linter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pydantic.*",
]
